# internal/server/http/routes.go
@@ -1,6 +1,7 @@
 package http
 
 import (
+	"github.com/B-Dmitriy/expenses/internal/services/categories"
 	"log/slog"
 	"net/http"
 
@@ -28,23 +29,33 @@ func initRoutes(
 
 	usersStore := usersDB.NewUsersStorage(db)
 	tokensStore := tokensDB.NewTokensStorage(db)
-	_ = categoriesDB.NewCategoriesStorage(db)
+	categoriesStore := categoriesDB.NewCategoriesStorage(db)
 
 	usersService := users.NewUsersService(logger, usersStore, v, utils, pm)
 	authService := auth.NewAuthService(logger, utils, v, usersStore, tokensStore, tm, pm)
+	categoriesService := categories.NewCategoriesPGService(logger, categoriesStore, v, utils)
+
+	// CORS
+	serv.Handle("OPTIONS /*", CorsMiddleware(http.HandlerFunc(CorsOptionHandlerFunc)))
 
 	// Auth
-	serv.HandleFunc("POST /api/v1/login", authService.Login)
-	serv.HandleFunc("POST /api/v1/registration", authService.Registration)
-	serv.Handle("POST /api/v1/logout", authService.AuthMiddleware(http.HandlerFunc(authService.Logout)))
-	serv.Handle("POST /api/v1/refresh", authService.AuthMiddleware(http.HandlerFunc(authService.Refresh)))
+	serv.Handle("POST /api/v1/login", CorsMiddleware(http.HandlerFunc(authService.Login)))
+	serv.Handle("POST /api/v1/registration", CorsMiddleware(http.HandlerFunc(authService.Registration)))
+	serv.Handle("POST /api/v1/logout", CorsMiddleware(authService.AuthMiddleware(http.HandlerFunc(authService.Logout))))
+	serv.Handle("POST /api/v1/refresh", CorsMiddleware(authService.AuthMiddleware(http.HandlerFunc(authService.Refresh))))
 
 	// Users
-	serv.Handle("GET /api/v1/users/{userID}", authService.AuthMiddleware(http.HandlerFunc(usersService.GetUser)))
-	serv.Handle("PUT /api/v1/users/{userID}", authService.AuthMiddleware(http.HandlerFunc(usersService.EditUserInfo)))
-	serv.Handle("DELETE /api/v1/users/{userID}", authService.AuthMiddleware(http.HandlerFunc(usersService.DeleteUser)))
-	serv.Handle("GET /api/v1/users", authService.AuthOnlyAdminMiddleware(http.HandlerFunc(usersService.GetUsersList)))
-	serv.Handle("POST /api/v1/users", authService.AuthOnlyAdminMiddleware(http.HandlerFunc(usersService.CreateUser)))
+	serv.Handle("GET /api/v1/users/{userID}", CorsMiddleware(authService.AuthMiddleware(http.HandlerFunc(usersService.GetUser))))
+	serv.Handle("PUT /api/v1/users/{userID}", CorsMiddleware(authService.AuthMiddleware(http.HandlerFunc(usersService.EditUserInfo))))
+	serv.Handle("DELETE /api/v1/users/{userID}", CorsMiddleware(authService.AuthMiddleware(http.HandlerFunc(usersService.DeleteUser))))
+	serv.Handle("GET /api/v1/users", CorsMiddleware(authService.AuthOnlyAdminMiddleware(http.HandlerFunc(usersService.GetUsersList))))
+	serv.Handle("POST /api/v1/users", CorsMiddleware(authService.AuthOnlyAdminMiddleware(http.HandlerFunc(usersService.CreateUser))))
+
+	// Categories
+	serv.Handle(
+		"GET /api/v1/categories",
+		CorsMiddleware(authService.AuthMiddleware(http.HandlerFunc(categoriesService.GetCategoriesList))),
+	)
 
 	return serv
 }
